Section divider spacing fixed on mobile - first grid-gap was causing the margin to double up

--- a/src/assets/styles/base/_typography.scss
+++ b/src/assets/styles/base/_typography.scss
@@ -135,7 +135,11 @@ img {
   }
   &--margin-blog {
     margin-bottom: $spacing-blog-grid;
-    margin-top: $spacing-blog-grid;
+  }
+  @media screen and (min-width: map-get($bp, "sm")) {
+    &--margin-blog {
+      margin-top: $spacing-blog-grid;
+    }
   }
   &--block-hr {
     justify-content: center;
